--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,31 +1,43 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: [ "main" ]
+    pull_request:
+        branches: [ "main" ]
 
 jobs:
-  build:
+    build:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.2.2
-    - name: JDK 17 를 준비한다.
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+        steps:
+            - name: checkout
+              uses: actions/checkout@v4.2.2
+            - name: JDK 17 를 준비한다.
+              uses: actions/setup-java@v4
+              with:
+                  java-version: '17'
+                  distribution: 'temurin'
+                  cache: gradle
 
-    - name: gradlew 의 root 실행권한을 부여한다.
-      run: chmod +x gradlew
-    - name: Gradle 을 빌드한다.
-      run: ./gradlew build --stacktrace
-    - name: 유닛 테스트를 실행한다.
-      run: ./gradlew test
-    - name: Print Hello World
-      run: echo "Hello World"
+            - name: gradlew 의 root 실행권한을 부여한다.
+              run: chmod +x gradlew
+            - name: Gradle 을 빌드한다.
+              run: ./gradlew build --stacktrace
+            - name: 유닛 테스트를 실행한다.
+              run: ./gradlew test
+            - name: Print Hello World
+              run: echo "Hello World"
+
+
+            - name: Close Pull Request on Failure
+              if: failure()  # 이전 단계 중 하나라도 실패했을 경우 실행
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: |
+                  curl -X PATCH \
+                    -H "Authorization: token $GITHUB_TOKEN" \
+                    -H "Content-Type: application/json" \
+                    -d '{"state": "closed"}' \
+                    https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}
