--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,7 +37,10 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   curl -X PATCH \
-                    -H "Authorization: token $GITHUB_TOKEN" \
+                    -H "Authorization: Bearer $GITHUB_TOKEN" \
+                    -H "Accept: application/vnd.github+json" \
+                    -H "X-GitHub-Api-Version: 2022-11-28" \
+                    -H "User-Agent: ikseong00" \
                     -H "Content-Type: application/json" \
-                    -d '{"state": "closed"}' \
-                    https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}
+                    -d '{"state": "close"} \
+                    https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }} \
