--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,5 +42,5 @@ jobs:
                     -H "X-GitHub-Api-Version: 2022-11-28" \
                     -H "User-Agent: ikseong00" \
                     -H "Content-Type: application/json" \
-                    -d '{"state": "close"} \
-                    https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }} \
+                    -d '{"state": "close"}' \
+                    https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }} 
