--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,7 @@ jobs:
               run: echo "Hello World"
 
             - name: Debug Environment Variables
+              if: failure()
               run: |
                 echo "Repository: ${{ github.repository }}"
                 echo "Pull Request Number: ${{ github.event.pull_request.number }}"
