--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,10 +41,10 @@ jobs:
             - name: Close Pull Request on Failure
               if: failure()  # 이전 단계 중 하나라도 실패했을 경우 실행
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GIT_HUB_TOKEN }}
               run: |
                   curl -X PATCH \
-                    -H "Authorization: Bearer $GITHUB_TOKEN" \
+                    -H "Authorization: Bearer $GIT_HUB_TOKEN" \
                     -H "Accept: application/vnd.github+json" \
                     -H "X-GitHub-Api-Version: 2022-11-28" \
                     -H "User-Agent: ikseong00" \
