--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,7 +44,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GIT_HUB_TOKEN }}
               run: |
                   curl -X PATCH \
-                    -H "Authorization: Bearer $GIT_HUB_TOKEN" \
+                    -H "Authorization: Bearer $GITHUB_TOKEN" \
                     -H "Accept: application/vnd.github+json" \
                     -H "X-GitHub-Api-Version: 2022-11-28" \
                     -H "User-Agent: ikseong00" \
